# bluetext

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  commandHandler.cpp  commandHandler.h  console.cpp  console.h  inputBuffer.cpp  inputBuffer.h  main.cpp  message.cpp  message.h  messageCollection.cpp  messageCollection.h  programState.h
src/clients/: client.cpp  client.h  guestClient.cpp  guestClient.h  hostClient.cpp  hostClient.h  remote.cpp
src/commands/: JoinCommand.cpp  JoinCommand.h  clearCommand.cpp  clearCommand.h  command.cpp  command.h  commandHandler.cpp  commandHandler.h  helloCommand.cpp  helloCommand.h  hostCommand.cpp  hostCommand.h  leaveCommand.cpp  leaveCommand.h  nameCommand.cpp  nameCommand.h  stopCommand.cpp  stopCommand.h
src/input/: inputBuffer.cpp  inputBuffer.h  inputHandler.cpp  inputHandler.h
src/messages/: errorMessage.cpp  errorMessage.h  message.cpp  message.h  messageCollection.cpp  messageCollection.h  systemMessage.cpp  systemMessage.h  userMessage.cpp  userMessage.h
src/networkables/: networkable.cpp  networkable.h  remote.h
src/networkables/bluetooth/: btClient.cpp  btClient.h  btServer.cpp  btServer.h
